fix: deno githooks added again

--- a/deno.json
+++ b/deno.json
@@ -29,7 +29,9 @@
     "generate-icons": "deno run -A --unstable static/generate-icons.ts",
     "dev": "deno run -A --env --unstable --unstable-hmr dev.ts"
   },
-  
+  "githooks": {
+    "pre-commit": "check"
+  },
   "exclude": [
     "node_modules",
     "static/",
